--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "ext-mbstring": "*"
     },
     "require-dev": {
-        "laravel/framework": "^5.5|^6.0|^7.0",
+        "laravel/framework": "^5.5|^6.0|^7.0|^8.0",
         "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0",
         "phpunit/phpunit": "^8.0|^9.0",
         "friendsofphp/php-cs-fixer": "^2.16"
